[project]
name = "comfyui-civitai-imageplus"
version = "0.1.1"
description = "Browse CivitAI images in ComfyUI, extract and edit prompts, preview selected image and pass to I2I."
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "aiohttp",
  "numpy",
  "Pillow",
]

[project.urls]
Repository = "https://github.com/CovertBannana/ComfyUI_CivitAI_ImagePlus"

[tool.comfy]
PublisherId = "covertbannana"
DisplayName = "CivitAI ImagePlus"
Icon = ""

